[gd_scene load_steps=14 format=2]

[ext_resource path="res://tiles/terrain/sand/corner_outer.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://tiles/terrain/sand/flat.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://tiles/terrain/sand/corner_inner.mesh" type="ArrayMesh" id=3]
[ext_resource path="res://tiles/terrain/sand/edge.mesh" type="ArrayMesh" id=4]
[ext_resource path="res://tiles/terrain/water/water_material.tres" type="Material" id=5]
[ext_resource path="res://tiles/terrain/sand/sand_template.gd" type="Script" id=6]
[ext_resource path="res://tiles/terrain/water/water_tile.tres" type="Resource" id=7]
[ext_resource path="res://tiles/terrain/bridge/bridge_tile.tres" type="Resource" id=8]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( 1, -0.5, 0.5, 0.5, -0.5, 1, 0.5, -0.5, 0.5, 1, -0.5, 1, 0.5, -0.5, 1, 1, -0.5, 0.5, -0.5, 0, 1, -1, 0, 0.5, -0.5, 0, 0.5, -0.5, 0, 1, -1, 0, 1, -1, 0, 0.5, 0, 0, 1, -0.5, 0, 0.5, 0, 0, 0.5, 0, 0, 1, -0.5, 0, 1, -0.5, 0, 0.5, 0, 0, 1, 0.5, -0.5, 0.5, 0.5, -0.5, 1, 0, 0, 1, 0, 0, 0.5, 0.5, -0.5, 0.5, 0.5, 0, -0.5, 0, 0, -1, 0.5, 0, -1, 0.5, 0, -0.5, 0, 0, -0.5, 0, 0, -1, 0.5, 0, 0, 0, 0, -0.5, 0.5, 0, -0.5, 0.5, 0, 0, 0, 0, 0, 0, 0, -0.5, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0, -0.5, -0.5, 0, -1, 0, 0, -1, 0, 0, -0.5, -0.5, 0, -0.5, -0.5, 0, -1, 0, 0, 0, -0.5, 0, -0.5, 0, 0, -0.5, 0, 0, 0, -0.5, 0, 0, -0.5, 0, -0.5, 0, 0, 0.5, -0.5, 0, 0, 0, 0, 0, 0, 0, 0.5, -0.5, 0, 0.5, -0.5, 0, 0, -0.5, 0, -0.5, -1, 0, -1, -0.5, 0, -1, -0.5, 0, -0.5, -1, 0, -0.5, -1, 0, -1, -0.5, 0, -0.5, -1, 0, 0, -1, 0, -0.5, -0.5, 0, 0, -1, 0, 0, -0.5, 0, -0.5, -0.5, 0, 0.5, -1, 0, 0, -0.5, 0, 0, -0.5, 0, 0.5, -1, 0, 0.5, -1, 0, 0, 1, 0, -0.5, 0.5, 0, -1, 1, 0, -1, 1, 0, -0.5, 0.5, 0, -0.5, 0.5, 0, -1, 1, 0, 0, 0.5, 0, -0.5, 1, 0, -0.5, 1, 0, 0, 0.5, 0, 0, 0.5, 0, -0.5, 0.5, 0, 0, 1, -0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0, 0, 1, 0, 0, 1, -0.5, 0.5, 0, 0, 0.5, 0.5, 0, 0, 0.5, -0.5, 0.5 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 1, -0.5, 1, 0.5, -0.5, 0.5, 1, -0.5, 0.5, 1, -0.5, 1, 0.5, -0.5, 1, 0.5, -0.5, 0.5, -0.5, -0.5, 1, -1, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 1, -1, -0.5, 1, -1, -0.5, 0.5, 0, -0.5, 1, -0.5, -0.5, 0.5, 0, -0.5, 0.5, 0, -0.5, 1, -0.5, -0.5, 1, -0.5, -0.5, 0.5, 0.5, -0.5, 1, 0, -0.5, 0.5, 0.5, -0.5, 0.5, 0.5, -0.5, 1, 0, -0.5, 1, 0, -0.5, 0.5, 0, 0, -0.5, 0.5, -0.5, -1, 0.5, -0.5, -0.5, 0, 0, -0.5, 0, 0, -1, 0.5, -0.5, -1, 0, 0, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0, 0.5, -0.5, 0.5, 0.25, -0.5, 0.25, 0.5, -0.5, 0, 0.5, -0.5, 0.5, 0, -0.5, 0.5, 0.25, -0.5, 0.25, 0, 0, -0.5, -0.5, 0, -1, 0, 0, -1, 0, 0, -0.5, -0.25, 0, -0.25, -0.5, 0, -1, -0.5, 0, 0, 0, 0, -0.5, 0.25, -0.5, 0.25, -0.25, 0, -0.25, 0, 0, -0.5, -0.5, 0, 0, -0.5, 0, 0, 0.25, -0.5, 0.25, 0, -0.5, 0.5, -0.25, 0, -0.25, -1, 0, -1, -0.5, 0, -1, -0.25, 0, -0.25, -1, 0, -0.5, -1, 0, -1, -0.25, 0, -0.25, -1, 0, 0, -1, 0, -0.5, -0.5, 0, 0, -1, 0, 0, -0.25, 0, -0.25, -1, 0, 0, -0.5, -0.5, 0.5, -1, -0.5, 0.5, -1, 0, 0, -0.5, 0, 0, -0.5, -0.5, 0.5, 1, -0.5, -0.5, 0.5, -0.5, -1, 1, -0.5, -1, 1, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -1, 1, -0.5, 0, 0.5, -0.5, -0.5, 1, -0.5, -0.5, 1, -0.5, 0, 0.5, -0.5, 0, 0.5, -0.5, -0.5, 1, -0.5, 0.5, 0.5, -0.5, 0, 1, -0.5, 0, 1, -0.5, 0.5, 0.5, -0.5, 0.5, 0.5, -0.5, 0, 0, 0, -0.5, 0.5, -0.5, 0, 0.25, -0.5, 0.25, -0.5, 0, 0, 0, -0.5, 0.5, -0.5, -0.5, 0.5 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 1, -0.5, 0.5, 0.5, -0.5, 1, 0.5, -0.5, 0.5, 1, -0.5, 1, 0.5, -0.5, 1, 1, -0.5, 0.5, -0.5, -0.5, 1, -1, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 1, -1, -0.5, 1, -1, -0.5, 0.5, 0, -0.5, 1, -0.5, -0.5, 0.5, 0, -0.5, 0.5, 0, -0.5, 1, -0.5, -0.5, 1, -0.5, -0.5, 0.5, 0.5, -0.5, 1, 0, -0.5, 0.5, 0.5, -0.5, 0.5, 0.5, -0.5, 1, 0, -0.5, 1, 0, -0.5, 0.5, 0.5, 0, -0.5, 0, 0, -1, 0.5, 0, -1, 0.5, 0, -0.5, 0, 0, -0.5, 0, 0, -1, 0.5, 0, -0.5, 0, 0, 0, 0, 0, -0.5, 0.5, 0, 0, 0, 0, 0, 0.5, 0, -0.5, 0, 0, 0, 0.5, -0.5, 0.5, 0, -0.5, 0.5, 0, 0, 0, 0.5, 0, 0, 0.5, -0.5, 0.5, 0, 0, -0.5, -0.5, 0, -1, 0, 0, -1, 0, 0, -0.5, -0.5, 0, -0.5, -0.5, 0, -1, 0, 0, 0, -0.5, 0, -0.5, 0, 0, -0.5, 0, 0, 0, -0.5, 0, 0, -0.5, 0, -0.5, -0.5, 0, 0, 0, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0, 0, 0, 0, 0, 0, -0.5, 0.5, -0.5, 0, -0.5, -1, 0, -1, -0.5, 0, -1, -0.5, 0, -0.5, -1, 0, -0.5, -1, 0, -1, -0.5, 0, 0, -1, 0, -0.5, -0.5, 0, -0.5, -0.5, 0, 0, -1, 0, 0, -1, 0, -0.5, -1, -0.5, 0.5, -0.5, 0, 0, -0.5, -0.5, 0.5, -1, 0, 0, -0.5, 0, 0, -1, -0.5, 0.5, 1, 0, -1, 0.5, 0, -0.5, 0.5, 0, -1, 1, 0, -0.5, 0.5, 0, -0.5, 1, 0, -1, 1, 0, 0, 0.5, 0, -0.5, 1, 0, -0.5, 1, 0, 0, 0.5, 0, 0, 0.5, 0, -0.5, 0.5, 0, 0, 1, -0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0, 0, 1, 0, 0, 1, -0.5, 0.5 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 0.25, 1 )

[sub_resource type="PlaneMesh" id=5]
material = ExtResource( 5 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 6 )
water_tile = ExtResource( 7 )
bridge_tile = ExtResource( 8 )

[node name="corner_inner" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = ExtResource( 3 )
material/0 = null

[node name="corner_inner_collision" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="corner_outer" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
material/0 = null

[node name="corner_outer_collision" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="edge" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = ExtResource( 4 )
material/0 = null

[node name="edge_collision" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="flat" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null

[node name="flat_collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
shape = SubResource( 4 )

[node name="water" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
mesh = SubResource( 5 )
material/0 = null
